# fixr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/zk_prover/src/: lib.rs
docs/: architecture.md  disclosure-types.md  getting-started.md  sp1-integration.md
examples/: whale_gating.ts
programs/fixr_core/: Cargo.toml
programs/fixr_core/src/: errors.rs  lib.rs  state.rs
programs/fixr_core/src/instructions/: disclosure.rs  init.rs  mod.rs  verify_proof.rs
scripts/: verify_proof.sh
sdk/: jest.config.js  package-lock.json  package.json
sdk/src/: index.ts  prover.ts  types.ts
sdk/tests/: disclosure.test.ts  prover.test.ts
